# data-project-rbc

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
docs/: architecture.drawio
sample_data/: example_claim_clean.json  example_claim_fraud.json  sample_claims.csv
src/claimguard/api/: audit.py  main.py  review_queue.py
src/claimguard/aws/: lambda_handler.py
src/claimguard/dashboard/: app.py
src/claimguard/data/: claim_note.py  loader.py  schema.py  synthetic.py
src/claimguard/detection/: anomaly.py  fairness.py  llm_perception.py  policy.yaml  rules.py  scorer.py  supervised.py
src/claimguard/mlops/: metrics.py  train.py
src/claimguard/pipeline/: features.py  run_pipeline.py  store.py  validate.py
tests/: conftest.py  test_api.py  test_audit.py  test_aws_integration.py  test_claim_note.py  test_features.py  test_integration.py  test_lambda_and_fairness.py  test_loader_and_llm_fallbacks.py  test_models.py  test_pipeline_bits.py  test_review_queue.py  test_rules.py  test_synthetic.py
